--- a/package.json
+++ b/package.json
@@ -20,10 +20,19 @@
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^12.0.4",
+    "contentlayer": "^0.0.32",
     "next": "12.0.4",
+    "next-contentlayer": "^0.0.32",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "reading-time": "^1.5.0",
+    "rehype-autolink-headings": "^6.1.0",
+    "rehype-code-titles": "^1.0.3",
+    "rehype-highlight": "^5.0.0",
+    "rehype-prism-plus": "^1.1.3",
+    "rehype-slug": "^5.0.0",
+    "remark-gfm": "^3.0.1",
     "sass": "^1.43.5"
   },
   "devDependencies": {
