--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^12.0.4",
+    "axios": "^0.24.0",
     "contentlayer": "^0.0.32",
     "next": "12.0.4",
     "next-contentlayer": "^0.0.32",
